# timetables

./: .gitmodules  CNAME  Cargo.toml  README.md  better-comcigan-b849a598edc9934e.js  better-comcigan-b849a598edc9934e_bg.wasm  better-comcigan-bd7ba5c89bac0d2a.js  better-comcigan-bd7ba5c89bac0d2a_bg.wasm  better-comcigan-f75d37f1ed6e08eb.js  better-comcigan-f75d37f1ed6e08eb_bg.wasm  index.html  styles-1e2f74a30097ea3e.css  styles-cb4eb259a1b813d5.css  styles.css
.github/workflows/: build.yml
src/: main.rs
