[package]
name = "better-comcigan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comcigan-rs = { git = "http://github.com/dolphin2410/comcigan-rs", features = ["wasm"] }
log = "0.4.17"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = "0.19.3"
